fixed letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,12 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  letter-spacing: 4%;
 }
 
 button {
   line-height: 24px;
-  letter-spacing: 4%;
+  letter-spacing: 0.05em;
+  
 }
 
 img {
@@ -194,7 +194,7 @@ li {
   margin-bottom: 8px;
   padding: 10px;
   border: 1px solid #ccc;
-  border-radius: 5px;
+  border-radius: 8px;
   text-align: center;
 }
 
@@ -206,7 +206,7 @@ li {
   background-color: rgb(78, 117, 255);
   color: #fff;
   border: none;
-  border-radius: 4px;
+  border-radius: 8px;
   margin-top: 8px;
   cursor: pointer;
 }
@@ -230,4 +230,7 @@ li {
   padding: 32px;
   border-radius: 8px;
   background: rgb(246, 246, 254);
+  margin-bottom: 3em;
+  transition: all 950ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
